[package]
name = "medusa"
version = "0.12.0"
edition = "2021"
description = "Medusa Skill Framework (MSF) - Ultra-fast skill scanner with audit-based ranking"

[[bin]]
name = "medusa"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
fxhash = "0.2"
walkdir = "2.5"
rayon = "1.10"
regex = "1.10"
lazy_static = "1.4"
chrono = "0.4"

[profile.release]
opt-level = 3
panic = "abort"
strip = true
